	* client/common/client.c: Removed unused variables from
	recovery_info_t, does not show turn 0 anymore.
	* common/map.c: Added default case
	* common/state.c, common/state.h, server/gold.c, server/pregame.c,
	server/server.h: Fixed reconnect during distribution of gold. 
	* client/common/client.c, client/common/client.h,
	client/common/develop.c: Removed unused function road_building_begin.

2005-01-15  Roland Clobus <rclobus@bigfoot.com>
	* INSTALL, .cvsignore: Removed INSTALL from CVS. It is generated
	* README: Added information from the old INSTALL
	
2005-01-15  0.8.1.49  Daniel <dgun@umpire.com>
	* common/map.c, common/map.h: Patch #1100340: Added the option to mark
	a tile such that it will never be shuffled, by adding a + (plus) after
	the number in the .game file. All gold tiles will now be shuffled,
	unless they are marked.
	* server/henjes.game, server/seafarers-gold.game: Patch #1101870:
	Marked all gold tiles such that they will not be shuffled, when random
	map is turned on.

2005-01-09  0.8.1.48  Roland Clobus <rcobus@bigfoot.com>
	* common/buildrec.c, common/map.h, common/map_query.c: Bug #1094484:
	Disallow the building of a road during setup phase when the settlement
	cannot be built.
	* common/network.c, meta-server/gnocatan-meta-server.c: Minimal system
	include files.
	* server/buildutil.c, server/develop.c, server/discard.c,
	server/gold.c, server/meta.c, server/player.c, server/pregame.c,
	server/resource.c, server/robber.c, server/server.c, server/trade.c,
	server/turn.c: Minimal list of include files.
	* client/gtk/interface.c: Bug #1027642, Bug #942472: Player did not
	get a turn after the setup phase in a second game with the same
	client.
	* client/gtk/gui.c: Minor spelling change, to make text in about boxes
	of client and server the same.
	
2004-12-25  0.8.1.47  Etan Reisner <deryni@eden.rutgers.edu>
	* server/gtk/gnocatan-server-gtk.c, client/gtk/gui.c: Replaced GNOME
	about dialog with Gtk code.
