@@ -3,6 +3,7 @@
  *
  * Copyright (C) 1999 the Free Software Foundation
  * Copyright (C) 2003 Bas Wijnen <b.wijnen@phys.rug.nl>
+ * Copyright (C) 2004 Roland Clobus <rclobus@bigfoot.com>
  * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -21,159 +22,46 @@
 
 #include "config.h"
 #include "frontend.h"
+#include "resource-table.h"
 
-static GtkWidget *gold_choose_clist; /* list of players who receive gold */
+enum {
+	GOLD_COLUMN_PLAYER_ICON, /**< Player icon */
+	GOLD_COLUMN_PLAYER_NUM,  /**< Internal: player number */
+	GOLD_COLUMN_PLAYER_NAME, /**< Player name */
+	GOLD_COLUMN_AMOUNT,      /**< The amount to choose */
+	GOLD_COLUMN_LAST
+	};
 
-typedef struct {
-	gint num; /* how many of this resource do we have already */
-	gint take; /* how many of this resource are we planning to take */
-	gint bank; /* how many of this resource are still in the bank */
-	GtkWidget *current_entry;
-	GtkWidget *less;
-	GtkWidget *more;
-	GtkWidget *take_entry;
-	GtkWidget *bank_entry;
-} GoldInfo;
+static GtkListStore *gold_store; /**< the gold data */
+static GtkWidget *gold_widget;  /**< the gold widget */
+
+/** The player line is found here */
+static GtkTreeIter gold_found_iter;
+/** Has the player line been found ? */
+enum {
+	STORE_MATCH_EXACT,
+	STORE_MATCH_INSERT_BEFORE,
+	STORE_NO_MATCH
+	} gold_found_flag;
 
 static struct {
 	GtkWidget *dlg;
-	GtkWidget *total_entry;
-	GoldInfo res[NO_RESOURCE];
-	gint target;
+	GtkWidget *resource_widget;
 } gold;
 
-static void format_info(GoldInfo *info)
-{
-	char buff[16];
-	sprintf(buff, "%d", info->num + info->take);
-	gtk_entry_set_text(GTK_ENTRY(info->current_entry), buff);
-	sprintf(buff, "%d", info->take);
-	gtk_entry_set_text(GTK_ENTRY(info->take_entry), buff);
-	if (info->bank <= gold.target) /* The bank can be emptied */
-	 	sprintf(buff, "%d", info->bank - info->take);
-	else
-		sprintf(buff, "++"); /* The bank cannot be emptied */
-	gtk_label_set_text(GTK_LABEL(info->bank_entry), buff);
-}
-
-static void check_total(void)
-{
-	gint idx;
-	gint total;
-	char buff[16];
-	total = 0;
-	for (idx = 0; idx < numElem(gold.res); idx++) {
-		if (gold.res[idx].take > gold.res[idx].bank) {
-			gold.res[idx].take = gold.res[idx].bank;
-			format_info (&gold.res[idx]);
-		}
-		total += gold.res[idx].take;
-	}
-	sprintf(buff, "%d", total);
-	gtk_entry_set_text(GTK_ENTRY(gold.total_entry), buff);
-	for (idx = 0; idx < numElem(gold.res); idx++) {
-		gtk_widget_set_sensitive(gold.res[idx].less,
-				gold.res[idx].take > 0);
-		gtk_widget_set_sensitive(gold.res[idx].more,
-				total < gold.target
-				&& gold.res[idx].take < gold.res[idx].bank);
-	}
-	frontend_gui_update ();
-}
-
-static void less_resource_cb(UNUSED(void *widget), GoldInfo *info)
-{
-	--info->take;
-	format_info(info);
-	check_total();
-}
-
-static void more_resource_cb(UNUSED(void *widget), GoldInfo *info)
-{
-	++info->take;
-	format_info(info);
-	check_total();
-}
-
-static void add_resource_table_row(GtkWidget *table,
-		                                   gint row, Resource resource)
-{
-	GtkWidget *lbl;
-	GtkWidget *entry;
-	GtkWidget *arrow;
-	GoldInfo *info;
-	info = &gold.res[resource];
-	info->num = resource_asset(resource);
-	info->take = 0;
-	/* label with resource name */
-	lbl = gtk_label_new(resource_name(resource, TRUE));
-	gtk_widget_show(lbl);
-	gtk_table_attach(GTK_TABLE(table), lbl, 0, 1, row, row + 1,
-		(GtkAttachOptions)GTK_EXPAND | GTK_FILL,
-		(GtkAttachOptions)GTK_EXPAND | GTK_FILL, 0, 0);
-	gtk_misc_set_alignment(GTK_MISC(lbl), 1, 0.5);
-	/* less arrow */
-	arrow = info->less = gtk_button_new_with_label(_("<less"));
-	gtk_widget_set_sensitive(arrow, FALSE);
-	gtk_signal_connect(GTK_OBJECT(arrow), "clicked",
-		GTK_SIGNAL_FUNC(less_resource_cb),
-		&gold.res[resource]);
-	gtk_widget_show(arrow);
-	gtk_table_attach(GTK_TABLE(table), arrow, 1, 2, row, row + 1,
-		(GtkAttachOptions)GTK_FILL,
-		(GtkAttachOptions)GTK_EXPAND, 0, 0);
-
-	/* entry with maximum bank value */
-	entry = info->bank_entry = gtk_label_new("");
-	gtk_widget_show(entry);
-	gtk_table_attach(GTK_TABLE(table), entry, 2, 3, row, row + 1,
-		(GtkAttachOptions)GTK_FILL,
-		(GtkAttachOptions)GTK_EXPAND | GTK_FILL, 0, 0);
-	gtk_widget_set_usize(entry, 30, -1);
-
-	/* more arrow */
-	arrow = info->more = gtk_button_new_with_label(_("more>"));
-	gtk_widget_set_sensitive(arrow, info->bank > 0);
-	gtk_signal_connect(GTK_OBJECT(arrow), "clicked",
-		GTK_SIGNAL_FUNC(more_resource_cb),
-		&gold.res[resource]);
-	gtk_widget_show(arrow);
-	gtk_table_attach(GTK_TABLE(table), arrow, 3, 4, row, row + 1,
-		(GtkAttachOptions)GTK_FILL,
-		(GtkAttachOptions)GTK_EXPAND, 0, 0);
-	/* take entry */
-	entry = info->take_entry = gtk_entry_new();
-	gtk_widget_show(entry);
-	gtk_table_attach(GTK_TABLE(table), entry, 4, 5, row, row + 1,
-		(GtkAttachOptions)GTK_FILL,
-		(GtkAttachOptions)GTK_EXPAND | GTK_FILL, 0, 0);
-	gtk_widget_set_usize(entry, 30, -1);
-	gtk_entry_set_editable(GTK_ENTRY(entry), FALSE); /* TODO: Or add a keystroke handler */
-	/* current assets entry */
-	entry = info->current_entry = gtk_entry_new();
-	gtk_widget_show(entry);
-	gtk_table_attach(GTK_TABLE(table), entry, 5, 6, row, row + 1,
-		(GtkAttachOptions)GTK_FILL,
-		(GtkAttachOptions)GTK_EXPAND | GTK_FILL, 0, 0);
-	gtk_widget_set_usize(entry, 30, -1);
-	gtk_entry_set_editable(GTK_ENTRY(entry), FALSE);
-	/* show this line */
-	format_info(info);
-}
-
-static gboolean ignore_close(UNUSED(GtkWidget *widget),
+static void amount_changed_cb(
+		UNUSED(ResourceTable *rt), 
 		UNUSED(gpointer user_data))
 {
-	return TRUE;
+	frontend_gui_update ();
 }
 
 /* fill an array with the current choice, to send to the server */
 gint *choose_gold_get_list(gint *choice)
 {
-	gint idx;
 	if (gold.dlg != NULL)
-		for (idx = 0; idx < numElem(gold.res); idx++)
-			choice[idx] = gold.res[idx].take;
+		resource_table_get_amount(
+			RESOURCETABLE(gold.resource_widget), choice);
 	return choice;
 }
 
@@ -181,24 +69,19 @@ void gold_choose_player_must (gint num, gint *bank)
 {
 	GtkWidget *dlg_vbox;
 	GtkWidget *vbox;
-	GtkWidget *lbl;
-	GtkWidget *table;
-	gint idx;
-	gint row;
 	char buff[128];
 
-	gold.target = num;
 	gold.dlg = gtk_dialog_new_with_buttons(_("Choose resources"),
 			       GTK_WINDOW(app_window),
 			       GTK_DIALOG_DESTROY_WITH_PARENT,
 			       GTK_STOCK_OK, GTK_RESPONSE_OK,
 			       NULL);
-	gtk_signal_connect(GTK_OBJECT(gold.dlg), "close",
-			   GTK_SIGNAL_FUNC(ignore_close), NULL);
-	gtk_signal_connect(GTK_OBJECT(gold.dlg), "destroy",
-			   GTK_SIGNAL_FUNC(gtk_widget_destroyed), &gold.dlg);
+        g_signal_connect(G_OBJECT(gold.dlg), "destroy",
+			G_CALLBACK(gtk_widget_destroyed), &gold.dlg);
 	gtk_widget_realize(gold.dlg);
-	gdk_window_set_functions(gold.dlg->window, GDK_FUNC_MOVE);
+	/* Disable close */
+	gdk_window_set_functions(gold.dlg->window, 
+			GDK_FUNC_ALL | GDK_FUNC_CLOSE);
 
 	dlg_vbox = GTK_DIALOG(gold.dlg)->vbox;
 	gtk_widget_show(dlg_vbox);
@@ -210,114 +93,101 @@ void gold_choose_player_must (gint num, gint *bank)
 
 	if (num == 1) sprintf (buff, _("You may choose 1 resource") );
 	else sprintf(buff, _("You may choose %d resources"), num);
-	lbl = gtk_label_new(buff);
-	gtk_widget_show(lbl);
-	gtk_box_pack_start(GTK_BOX(vbox), lbl, FALSE, TRUE, 0);
-	gtk_misc_set_alignment(GTK_MISC(lbl), 0, 0.5);
-
-	table = gtk_table_new(7, 6, FALSE);
-	gtk_widget_show(table);
-	gtk_box_pack_start(GTK_BOX(vbox), table, FALSE, TRUE, 0);
-	gtk_container_border_width(GTK_CONTAINER(table), 3);
-	gtk_table_set_row_spacings(GTK_TABLE(table), 3);
-	gtk_table_set_col_spacings(GTK_TABLE(table), 5);
-
-	/* fill the bank entry with its correct values */
-	for (idx = 0; idx < NO_RESOURCE; ++idx) gold.res[idx].bank = bank[idx];
-
-	row = 1;
-	lbl = gtk_label_new(_("Max"));
-	gtk_widget_show(lbl);
-	gtk_table_attach(GTK_TABLE(table), lbl, 2, 3, row, row+1,
-			(GtkAttachOptions)GTK_FILL,
-			(GtkAttachOptions) GTK_EXPAND | GTK_FILL, 0, 0);
-	gtk_misc_set_alignment(GTK_MISC(lbl), 0, 0.5);
-
-	lbl = gtk_label_new(_("Take"));
-	gtk_widget_show(lbl);
-	gtk_table_attach(GTK_TABLE(table), lbl, 4, 5, row, row+1,
-			 (GtkAttachOptions)GTK_EXPAND | GTK_FILL,
-			 (GtkAttachOptions) GTK_EXPAND | GTK_FILL, 0, 0);
-	gtk_misc_set_alignment(GTK_MISC(lbl), 0, 0.5);
-
-	lbl = gtk_label_new(_("Hand"));
-	gtk_widget_show(lbl);
-	gtk_table_attach(GTK_TABLE(table), lbl, 5, 6, row, row+1,
-			 (GtkAttachOptions)GTK_FILL,
-			 (GtkAttachOptions) GTK_EXPAND | GTK_FILL, 0, 0);
-	gtk_misc_set_alignment(GTK_MISC(lbl), 0, 0.5);
-
-	row++;
-	for (idx = 0; idx < NO_RESOURCE; ++idx)
-		add_resource_table_row(table, row++, idx);
-
-	lbl = gtk_label_new(_("Total resources"));
-	gtk_widget_show(lbl);
-	gtk_table_attach(GTK_TABLE(table), lbl, 0, 4, row, row+1,
-			 (GtkAttachOptions)GTK_FILL,
-			 (GtkAttachOptions) GTK_EXPAND | GTK_FILL, 0, 0);
-	gtk_misc_set_alignment(GTK_MISC(lbl), 1, 0.5);
-
-	gold.total_entry = gtk_entry_new();
-	gtk_widget_show(gold.total_entry);
-	gtk_table_attach(GTK_TABLE(table), gold.total_entry, 4, 5, row, row+1,
-			 (GtkAttachOptions)GTK_FILL,
-			 (GtkAttachOptions)GTK_EXPAND | GTK_FILL, 0, 0);
-	gtk_widget_set_usize(gold.total_entry, 30, -1);
-	gtk_entry_set_editable(GTK_ENTRY(gold.total_entry), FALSE);
+	
+	gold.resource_widget = resource_table_new(buff, TRUE, TRUE);
+	resource_table_set_total(RESOURCETABLE(gold.resource_widget), 
+			/* Text for total in choose gold dialog*/
+			_("Total resources"), num);
+	resource_table_limit_bank(RESOURCETABLE(gold.resource_widget), TRUE);
+	resource_table_set_bank(RESOURCETABLE(gold.resource_widget), bank);
+	gtk_widget_show(gold.resource_widget);
+	gtk_box_pack_start(GTK_BOX(vbox), gold.resource_widget, FALSE, TRUE, 0);
+	g_signal_connect(G_OBJECT(gold.resource_widget), "change",
+			G_CALLBACK(amount_changed_cb), NULL);
 
 	frontend_gui_register (gui_get_dialog_button(GTK_DIALOG(gold.dlg), 0),
 		   GUI_CHOOSE_GOLD, "clicked");
         gtk_widget_show(gold.dlg);
-	check_total();
+}
+
+/** Locate a line suitable for a player */
+static gboolean gold_locate_player(GtkTreeModel *model, 
+		UNUSED(GtkTreePath *path), GtkTreeIter *iter, 
+		gpointer user_data)
+{
+	int wanted = GPOINTER_TO_INT(user_data);
+	int current;
+	gtk_tree_model_get(model, iter, GOLD_COLUMN_PLAYER_NUM, &current, -1);
+	if (current > wanted) {
+		gold_found_flag = STORE_MATCH_INSERT_BEFORE;
+		gold_found_iter = *iter;
+		return TRUE;
+	} else if (current == wanted) {
+		gold_found_flag = STORE_MATCH_EXACT;
+		gold_found_iter = *iter;
+		return TRUE;
+	}
+	return FALSE;
 }
 
 void gold_choose_player_prepare(gint player_num, gint num)
 {
-	gint row;
-	gchar *row_data[3];
-	gchar buff[16];
-	gchar empty[1] = "";
+	GtkTreeIter iter;
+	GdkPixbuf *pixbuf;
 
-	sprintf(buff, "%d", num);
-	row_data[0] = empty;
-	row_data[1] = player_name(player_num, TRUE);
-	row_data[2] = buff;
+	/* Search for a place to add information about the player */
+	gold_found_flag = STORE_NO_MATCH;
+	gtk_tree_model_foreach(GTK_TREE_MODEL(gold_store), 
+			gold_locate_player, GINT_TO_POINTER(player_num));
+	switch (gold_found_flag) {
+		case STORE_NO_MATCH:
+			gtk_list_store_append(gold_store, &iter);
+			break;
+		case STORE_MATCH_INSERT_BEFORE:
+			gtk_list_store_insert_before(gold_store, &iter,
+					&gold_found_iter);
+			break;
+		case STORE_MATCH_EXACT:
+			iter = gold_found_iter;
+			break;
+		default:
+			g_assert(FALSE);
+	};
 
-	row = gtk_clist_append(GTK_CLIST(gold_choose_clist), row_data);
-	gtk_clist_set_row_data(GTK_CLIST(gold_choose_clist),
-			       row, player_get(player_num));
-	gtk_clist_set_pixmap(GTK_CLIST(gold_choose_clist), row, 0,
-			     player_get(player_num)->user_data, NULL);
+	pixbuf = player_create_icon(gold_widget, player_num, TRUE);
+	gtk_list_store_set(gold_store, &iter,
+		GOLD_COLUMN_PLAYER_ICON, pixbuf,
+		GOLD_COLUMN_PLAYER_NUM, player_num, 
+		GOLD_COLUMN_PLAYER_NAME, player_name(player_num, TRUE), 
+		GOLD_COLUMN_AMOUNT, num, 
+		-1);
+	g_object_unref(pixbuf);
 }
 
 void gold_choose_player_did(gint player_num, UNUSED(gint *resources)) {
-	gint row;
-
-	row = gtk_clist_find_row_from_data(GTK_CLIST(gold_choose_clist),
-			player_get(player_num));
-	if (row >= 0)
-		gtk_clist_remove(GTK_CLIST(gold_choose_clist), row);
-	if (player_num == my_player_num()) {
-		gtk_signal_disconnect_by_func(GTK_OBJECT(gold.dlg),
-		GTK_SIGNAL_FUNC(ignore_close), NULL);
-		gtk_widget_destroy(gold.dlg);
-		gold.dlg = NULL;
-		return;
+	/* check if the player was in the list.  If not, it is not an error.
+	 * That happens if the player auto-discards. */
+	gold_found_flag = STORE_NO_MATCH;
+	gtk_tree_model_foreach(GTK_TREE_MODEL(gold_store), 
+			gold_locate_player, GINT_TO_POINTER(player_num));
+	if (gold_found_flag == STORE_MATCH_EXACT) {
+		gtk_list_store_remove(gold_store, &gold_found_iter);
+		if (player_num == my_player_num()) {
+			gtk_widget_destroy(gold.dlg);
+			gold.dlg = NULL;
+		}
 	}
 }
 
 void gold_choose_begin () {
-	gtk_clist_clear(GTK_CLIST(gold_choose_clist));
+	gtk_list_store_clear(GTK_LIST_STORE(gold_store));
 	gui_gold_show();
 }
 
 void gold_choose_end () {
-	gtk_clist_clear(GTK_CLIST(gold_choose_clist));
+	gtk_list_store_clear(GTK_LIST_STORE(gold_store));
 	gui_gold_hide ();
 	if (gold.dlg != NULL) { /* shouldn't happen */
-		gtk_signal_disconnect_by_func(GTK_OBJECT(gold.dlg),
-		GTK_SIGNAL_FUNC(ignore_close), NULL);
 		gtk_widget_destroy(gold.dlg);
 		gold.dlg = NULL;
 	}
@@ -328,6 +198,8 @@ GtkWidget *gold_build_page() {
 	GtkWidget *label;
 	GtkWidget *alignment;
 	GtkWidget *scroll_win;
+	GtkCellRenderer *renderer;
+	GtkTreeViewColumn *column;
 
 	vbox = gtk_vbox_new(FALSE, 5);
 	gtk_widget_show(vbox);
@@ -345,27 +217,57 @@ GtkWidget *gold_build_page() {
 	gtk_container_add(GTK_CONTAINER(alignment), label);
 
 	scroll_win = gtk_scrolled_window_new(NULL, NULL);
+	gtk_scrolled_window_set_shadow_type (GTK_SCROLLED_WINDOW(scroll_win),
+			GTK_SHADOW_IN);
 	gtk_widget_show(scroll_win);
 	gtk_box_pack_start(GTK_BOX(vbox), scroll_win, TRUE, TRUE, 0);
 	gtk_scrolled_window_set_policy(GTK_SCROLLED_WINDOW(scroll_win),
-	GTK_POLICY_AUTOMATIC,
-	GTK_POLICY_AUTOMATIC);
+			GTK_POLICY_AUTOMATIC,
+			GTK_POLICY_AUTOMATIC);
 
-	gold_choose_clist = gtk_clist_new(3);
-	gtk_widget_show(gold_choose_clist);
-	gtk_container_add(GTK_CONTAINER(scroll_win), gold_choose_clist);
-	gtk_clist_set_column_width(GTK_CLIST(gold_choose_clist), 0, 16);
-	gtk_clist_set_column_width(GTK_CLIST(gold_choose_clist), 1, 130);
-	gtk_clist_set_column_width(GTK_CLIST(gold_choose_clist), 2, 20);
-	gtk_clist_column_titles_hide(GTK_CLIST(gold_choose_clist));
+	gold_store = gtk_list_store_new(GOLD_COLUMN_LAST, 
+			GDK_TYPE_PIXBUF, /* player icon */
+			G_TYPE_INT,      /* player number */
+			G_TYPE_STRING,   /* text */
+			G_TYPE_INT);     /* amount to choose */
+	gold_widget =
+		gtk_tree_view_new_with_model(GTK_TREE_MODEL(gold_store));
+	
+	column = gtk_tree_view_column_new_with_attributes("",
+			gtk_cell_renderer_pixbuf_new(), 
+			"pixbuf", GOLD_COLUMN_PLAYER_ICON, 
+			NULL);
+	gtk_tree_view_column_set_sizing(column, GTK_TREE_VIEW_COLUMN_GROW_ONLY);
+	gtk_tree_view_append_column(GTK_TREE_VIEW(gold_widget), column);
+
+	column = gtk_tree_view_column_new_with_attributes("",
+			gtk_cell_renderer_text_new(), 
+			"text", GOLD_COLUMN_PLAYER_NAME, 
+			NULL);
+	gtk_tree_view_column_set_sizing(column, GTK_TREE_VIEW_COLUMN_AUTOSIZE);
+	gtk_tree_view_column_set_expand(column, TRUE);
+	gtk_tree_view_append_column(GTK_TREE_VIEW(gold_widget), column);
+
+	renderer = gtk_cell_renderer_text_new();
+	column = gtk_tree_view_column_new_with_attributes("",
+			renderer, 
+			"text", GOLD_COLUMN_AMOUNT,  
+			NULL);
+	g_object_set(renderer, "xalign", 1.0f, NULL);
+	gtk_tree_view_column_set_sizing(column, GTK_TREE_VIEW_COLUMN_GROW_ONLY);
+	gtk_tree_view_append_column(GTK_TREE_VIEW(gold_widget), column);
+
+	gtk_tree_view_set_headers_visible(GTK_TREE_VIEW(gold_widget), FALSE);
+	gtk_widget_show(gold_widget);
+	gtk_container_add(GTK_CONTAINER(scroll_win), gold_widget);
 
 	return vbox;
 }
 
 gboolean can_choose_gold () {
-	gint total, idx;
-	total = 0;
-	for (idx = 0; idx < NO_RESOURCE; ++idx)
-		total += gold.res[idx].take;
-	return total == gold.target;
+	if (gold.dlg == NULL)
+		return FALSE;
+
+	return resource_table_is_total_reached(
+			RESOURCETABLE(gold.resource_widget));
 }
