@@ -46,6 +46,7 @@ struct _ResourceRow
 struct _ResourceTable
 {
 	GtkTable table;
+	GtkTooltips *tooltips;
     
 	struct _ResourceRow row[NO_RESOURCE];
 
@@ -53,6 +54,7 @@ struct _ResourceTable
 	gint total_current;
 	GtkWidget *total_widget;
 
+	gboolean limit_bank;
 	gboolean with_bank;
 	gboolean with_total;
 	gint bank_offset;
@@ -71,8 +73,9 @@ GtkWidget* resource_table_new(
 	gboolean with_bank,
 	gboolean with_total);
 
+void resource_table_limit_bank(ResourceTable *rt, gboolean limit);
 void resource_table_set_total(ResourceTable *rt, const gchar *text, gint total);
-
+void resource_table_set_bank(ResourceTable *rt, gint *bank);
 void resource_table_get_amount(ResourceTable *rt, gint *amount);
 gboolean resource_table_is_total_reached(ResourceTable *rt);
 
