@@ -6,6 +6,8 @@
 	server/server.h: Fixed reconnect during distribution of gold. 
 	* client/common/client.c, client/common/client.h,
 	client/common/develop.c: Removed unused function road_building_begin.
+	* client/gtk/gold.c, client/gtk/resource-table.c,
+	client/gtk/resource-table.h: Replaced gtk_clist.
 
 2005-01-15  Roland Clobus <rclobus@bigfoot.com>
 	* INSTALL, .cvsignore: Removed INSTALL from CVS. It is generated
